--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class=" col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
 
           <h1>Grow With Us</h1>
-          <h2>We are team of talanted Developers to help YOU Grow and Surpass Your competition</h2>
+          <h2>We are team of talented Developers to help YOU Grow and Surpass Your competition</h2>
           <div class="d-lg-flex">
           <a href="" class="btn-get-started scrollto btn-tip" data-target="#exampleModalCenter" data-toggle="modal">Get Started</a>
           </div>
